# mnumerics

./: LICENSE  README.md
include/: mnumerics.h  vector.h
scripts/: build.sh  build_install_clean.sh  build_test_clean.sh  build_test_install_clean.sh
src/: mnumerics.c  vector.c
test/: CMakeLists.txt  mnm_ex.c  test_mnumerics.c  test_vector.c
